--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -10976,24 +10976,10 @@
         "print( \"My list after the deletion\",  lst )\n"
       ],
       "metadata": {
-        "id": "OAXxUwTZnbF9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bcaae2e1-3670-44ee-d23f-f57a85869e31"
+        "id": "OAXxUwTZnbF9"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "My list before the deletion [1, 2, 3, 4, 5]\n",
-            "List after deleting the second index [1, 2, 4, 5]\n",
-            "My list after the deletion [1, 2, 4, 5]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -11180,22 +11166,10 @@
         "print(myIntFunction(1,2))"
       ],
       "metadata": {
-        "id": "mMyQSygGiHkS",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "15161e2d-8472-4bb6-a66a-03729fca1654"
+        "id": "mMyQSygGiHkS"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -11208,22 +11182,10 @@
         "print(myFloatFunction(1.1, 2.4))"
       ],
       "metadata": {
-        "id": "FzNCqhi_FEYV",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "52dce21b-deb0-4b79-d43f-207af0760cb9"
+        "id": "FzNCqhi_FEYV"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.64\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -11236,22 +11198,10 @@
         "print(myStrFunction(\"***\", \"*****\"))"
       ],
       "metadata": {
-        "id": "GH5rvw3IGOk0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "df3a7c32-a4b5-40a6-e430-104f45096134"
+        "id": "GH5rvw3IGOk0"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "********\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -11266,22 +11216,10 @@
         "print(myList)"
       ],
       "metadata": {
-        "id": "fBs8VSJtCEGD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6fbe90ef-9e6c-4174-ba73-b2712e2491d6"
+        "id": "fBs8VSJtCEGD"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 2, 3, 4, 5]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -11296,22 +11234,10 @@
         "print(myDict)"
       ],
       "metadata": {
-        "id": "OEt1WZh4LnfD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e6f880af-6c5d-4901-979d-60e8f0c6aee1"
+        "id": "OEt1WZh4LnfD"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'IDnumber': 123456, 'age': 32}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -11324,22 +11250,10 @@
         "print(myTestFunction(1,2))"
       ],
       "metadata": {
-        "id": "kLMIfGQkGB8k",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "00ecd5f1-f6ff-46ab-8954-18bf1875a3ba"
+        "id": "kLMIfGQkGB8k"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -11355,23 +11269,10 @@
         "print(type(myTuple))"
       ],
       "metadata": {
-        "id": "hDaxqbIcNPqw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "06be1b68-249a-4d1a-8c79-8d0e23f0495b"
+        "id": "hDaxqbIcNPqw"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(1, 2, 3, 4, 5)\n",
-            "<class 'tuple'>\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -11387,23 +11288,10 @@
         "print(type(myDict))"
       ],
       "metadata": {
-        "id": "SdIepmv-PLHk",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "550b90a7-ee3d-4ba5-a4e3-83bbe5d6ab71"
+        "id": "SdIepmv-PLHk"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'Name': 'Oleaf', 'age': '39'}\n",
-            "<class 'dict'>\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -12368,11 +12256,11 @@
       ],
       "metadata": {
         "id": "fj21q7Q3NKDa",
-        "outputId": "2723f6f6-9096-47c2-8359-6bff17c624b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 510
-        }
+        },
+        "outputId": "2723f6f6-9096-47c2-8359-6bff17c624b4"
       },
       "execution_count": 30,
       "outputs": [
@@ -13191,10 +13079,27 @@
         "myTrain.speed_down()"
       ],
       "metadata": {
-        "id": "ur1OBtk1S9wK"
+        "id": "ur1OBtk1S9wK",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        },
+        "outputId": "f414ab7c-5960-4888-9054-76445855e0e8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'Train' object has no attribute 'speed_down'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-31-890d820511f3>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;31m# Accessing the private method speed_down.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mmyTrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspeed_down\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Train' object has no attribute 'speed_down'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -14092,10 +13997,45 @@
       "source": [
         "# Exception for division by zero\n",
         "\n",
-        "myDivision = (1.0/float(input(\"Enter any number except zero \")))"
+        "myDivision = (1.0/float(input(\"Enter any number except zero \")))\n",
+        "print(myDivision)"
       ],
       "metadata": {
         "id": "FFqyEg3BXPV-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  myDivision = (1.0/float(input(\"Enter any number except zero \")))\n",
+        "  print(myDivision)\n",
+        "except:\n",
+        "  print('Wrong input')"
+      ],
+      "metadata": {
+        "id": "-oG72rABOdcq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  myDivision = (1.0/float(input(\"Enter any number except zero \")))\n",
+        "  print(myDivision)\n",
+        "except ValueError:\n",
+        "  print('Wrong value input')\n",
+        "except ZeroDivisionError:\n",
+        "  print('Division by zero')\n",
+        "except TypeError:\n",
+        "  print('Error')"
+      ],
+      "metadata": {
+        "id": "3_lDjLAqPpnF"
       },
       "execution_count": null,
       "outputs": []
@@ -14203,7 +14143,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "This example demonstrates the use of a *try...except...block* to handle multiple types of exceptions: ValueError, ZeroDivisionError, and TypeError. By specifying different *except* blocks for each exception type, the program can handle various errors in a more controlled way. For example, a ValueError may be raised if the input is not a valid number, a ZeroDivisionError occurs when attempting to divide by zero, and a TypeError is triggered when an operation is performed on incompatible data types. This approach allows the program to catch specific errors and provide meaningful error messages, making it easier to debug and maintain."
+        "This example demonstrates the use of a *try: except:* block to handle multiple types of exceptions: ValueError, ZeroDivisionError, and TypeError. By specifying different *except* blocks for each exception type, the program can handle various errors in a more controlled way. For example, a ValueError may be raised if the input is not a valid number, a ZeroDivisionError occurs when attempting to divide by zero, and a TypeError is triggered when an operation is performed on incompatible data types. This approach allows the program to catch specific errors and provide meaningful error messages, making it easier to debug and maintain."
       ],
       "metadata": {
         "id": "dWshBnfTMi7T"
@@ -14218,19 +14158,19 @@
         "---\n",
         "          try:\n",
         "              # Code that might raise exceptions\n",
-        "              check_expression()\n",
+        "              expression()\n",
         "\n",
-        "          except ValueError:\n",
-        "              # Handle ValueError\n",
-        "              print(\"Handling ValueError\")\n",
+        "          except Error1:\n",
+        "              # Handle Error1\n",
+        "              print(\"Message1\")\n",
         "\n",
-        "          except ZeroDivisionError:\n",
-        "              # Handle ZeroDivisionError\n",
-        "              print(\"Handling ZeroDivisionError\")\n",
+        "          except Error2:\n",
+        "              # Handle Error2\n",
+        "              print(\"Message2\")\n",
         "\n",
-        "          except TypeError:\n",
-        "              # Handle TypeError\n",
-        "              print(\"Handling TypeError\")\n"
+        "          except Error3:\n",
+        "              # Handle Error3\n",
+        "              print(\"Message3\")\n"
       ],
       "metadata": {
         "id": "zOQR-0pJM2f_"
@@ -14263,7 +14203,7 @@
         "except ZeroDivisionError:\n",
         "  print(\"Division by zero\")\n",
         "except TypeError:\n",
-        "  print(\"Error\")\n",
+        "  print(\"Wrong type\")\n",
         "\n"
       ],
       "metadata": {
