--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -14708,9 +14708,11 @@
         "                    |\n",
         "                Exception - SystemExit - KeyboardInterrupt - ...\n",
         "                    |\n",
-        "                ArithmeticError - LookupError - ...\n",
-        "                    |\n",
-        "                ZeroDivisionError - ..."
+        "                ArithmeticError - LookupError - TypeError - ValueError _ ...\n",
+        "                    |                 |\n",
+        "                ZeroDivisionError  IndexError - ...\n",
+        "                    |                 |\n",
+        "                ...                KeyError"
       ],
       "metadata": {
         "id": "SPSR0o_A0Bw1"
