--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -14262,38 +14262,26 @@
     {
       "cell_type": "code",
       "source": [
-        "def inverse_function(a):\n",
+        "def inverseFunction(a):\n",
         "  assert (a > 0), 'Division by zero, attempt!'\n",
         "  return 1/a"
       ],
       "metadata": {
         "id": "YqDpuVv25Xs4"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(inverse_function(0.05))"
+        "print(inverseFunction(0.0))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bBzxpjK97L7O",
-        "outputId": "ac47c6f2-de81-48ca-ab6a-edcb92883e4b"
+        "id": "bBzxpjK97L7O"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "20.0\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -14323,7 +14311,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "The *else* block in a *try...except...else* structure is executed only if no exceptions occur in the try block. This allows you to separate the code that should run only when everything goes smoothly from the code that handles exceptions. If an Error is raised and caught by an *except* block, the else block is skipped. Using *else* makes your code cleaner and easier to read by clearly distinguishing between Error handling and successful execution paths. It's particularly useful when you want to run additional logic only when the try block succeeds without errors."
+        "The *else* block in a *try: except: else:* structure is executed only if no exceptions occur in the try block. This allows you to separate the code that should run only when everything goes smoothly from the code that handles exceptions. If an Error is raised and caught by an *except* block, the else block is skipped. Using *else* makes your code cleaner and easier to read by clearly distinguishing between Error handling and successful execution paths. It's particularly useful when you want to run additional logic only when the try block succeeds without errors."
       ],
       "metadata": {
         "id": "vMQXZ4idJnEm"
@@ -14337,7 +14325,7 @@
         "---\n",
         "          try:\n",
         "              # Code that might raise an exception\n",
-        "              check_expression()\n",
+        "              expression()\n",
         "\n",
         "          except ExceptionType as e:\n",
         "              # Code to handle the exception\n",
@@ -14410,7 +14398,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "The *finally* keyword in Python is used at the end of a *try...except* block to define a block of code that will always be executed, regardless of whether an exception was raised or caught. This is especially useful for cleanup tasks such as closing files, releasing resources, or resetting variables, ensuring that essential final steps are performed no matter what happens in the try or except blocks. The *finally* block runs even if an exception is not caught, or if a *return* or *break* statement is executed earlier in the *try* or *except* section. By placing finally at the end of the structure, it guarantees reliable execution of critical code regardless of how the preceding blocks behave."
+        "The *finally* keyword in Python is used at the end of a *try: except:* block to define a block of code that will always be executed, regardless of whether an exception was raised or caught. This is especially useful for cleanup tasks such as closing files, releasing resources, or resetting variables, ensuring that essential final steps are performed no matter what happens in the try or except blocks. The *finally* block runs even if an exception is not caught, or if a *return* or *break* statement is executed earlier in the *try* or *except* section. By placing finally at the end of the structure, it guarantees reliable execution of critical code regardless of how the preceding blocks behave."
       ],
       "metadata": {
         "id": "Bim1CUn6IGf5"
@@ -14423,16 +14411,14 @@
         "\n",
         "---\n",
         "          try:\n",
-        "          # Code that may raise an exception\n",
-        "              check_expression()\n",
-        "          except ExceptionType as e:\n",
         "\n",
-        "          # Code to handle the exception\n",
+        "              expression()\n",
+        "          \n",
+        "          except ExceptionType as e:\n",
         "              print(\"An error occurred:\", e)\n",
+        "\n",
         "          finally:\n",
-        "        \n",
-        "          # Code that will always run\n",
-        "          cleanup_expression()\n"
+        "              expression() # It will be always executed\n"
       ],
       "metadata": {
         "id": "BsRbsv_AI2DD"
@@ -14572,7 +14558,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "This example demonstrates the use of a try-except block with objects to handle errors gracefully and provide meaningful error messages. When performing operations involving objects, such as accessing methods or attributes, errors like AttributeError, TypeError, or ValueError may occur. By enclosing the potentially problematic code within a try block and handling specific exceptions in the except block, the program can catch and respond to these issues without crashing. Additionally, using the exception object (e.g., except Exception as e:) allows the program to print or log the exact error message, giving clear insight into what went wrong, which helps with debugging and improving the user experience."
+        "This example demonstrates the use of a *try: except:* block with objects to handle errors gracefully and provide meaningful error messages. When performing operations involving objects, such as accessing methods or attributes, errors like AttributeError, TypeError, or ValueError may occur. By enclosing the potentially problematic code within a try block and handling specific exceptions in the except block, the program can catch and respond to these issues without crashing. Additionally, using the exception object (e.g., except Exception as e:) allows the program to print or log the exact error message, giving clear insight into what went wrong, which helps with debugging and improving the user experience."
       ],
       "metadata": {
         "id": "nUaElZSbFnKA"
@@ -14773,6 +14759,112 @@
       ],
       "metadata": {
         "id": "bwCfo4HY4CBO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#LookupError\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "mz8blkRIcHJU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "A LookupError is a base class for exceptions that occur when a key or index is not found. It includes two common subclasses: KeyError and IndexError. These are typically raised when you're trying to access something that doesn't exist, like a key in a dictionary that isn’t present or an index out of range in a list."
+      ],
+      "metadata": {
+        "id": "BOtIYIasbT1l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "MCey3PpSbYw4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "YYEIYFYibegK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example with dictionary (KeyError)\n",
+        "\n",
+        "myDict = {'apple': 10, 'banana': 5, 'cherry': 7}\n",
+        "\n",
+        "try:\n",
+        "    # Trying to access a key that doesn't exist\n",
+        "    print(myDict['orange'])\n",
+        "except KeyError as e:\n",
+        "    print(f\"KeyError: The key '{e}' was not found in the dictionary.\")\n"
+      ],
+      "metadata": {
+        "id": "8qanMT6lbhzo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example with list (IndexError)\n",
+        "\n",
+        "myList = [1, 2, 3, 4]\n",
+        "\n",
+        "try:\n",
+        "    # Trying to access an index that is out of range\n",
+        "    print(myList[5])\n",
+        "except IndexError as e:\n",
+        "    print(f\"IndexError: The index {e} is out of range for the list.\")"
+      ],
+      "metadata": {
+        "id": "RZoSaNprbsZA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example handling both KeyError and IndexError as LookupError\n",
+        "\n",
+        "myDict = {'apple': 10, 'banana': 5, 'cherry': 7}\n",
+        "myList = [1, 2, 3, 4]\n",
+        "\n",
+        "try:\n",
+        "    # Accessing a dictionary key that doesn't exist\n",
+        "    print(myDict['orange'])\n",
+        "\n",
+        "    # Trying to access an out-of-bounds list index\n",
+        "    print(myList[5])\n",
+        "except LookupError as e:\n",
+        "    print(f\"LookupError: {e}\")"
+      ],
+      "metadata": {
+        "id": "XFq9AIkobyvK"
       },
       "execution_count": null,
       "outputs": []
