Made some corrections in the examples.

--- a/day2/IntermediatePython_Exercises.ipynb
+++ b/day2/IntermediatePython_Exercises.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "8UqjNabksdrD"
    },
@@ -209,7 +209,7 @@
     "\n",
     "* For above array, sum over rows and columns of above array, respectively\n",
     "* Desired output:\n",
-    "> ```\n",
+    ">```\n",
     "[225 477 873]\n",
     "[ 180 1395]\n",
     "```"
@@ -244,9 +244,9 @@
     "$$ \n",
     "Where **$$ x, y \\in [-3, 3], \\sigma = 1. $$**\n",
     "* Gaussian is the exponent of `x^2 + y^2` (Hint: Use `np.exp()`)\n",
-    "* Both `x` and `y` range from `-3` to `3`, a total of linearlly spaced `7` elements\n",
-    "* You result should be a `(7 x 7)` array, each element is the radius of coordinates `(x, y)`.\n",
-    "* Do **NOT** use loop even if you are attempted to!!\n",
+    "* Both `x` and `y` range from `-3` to `3`, a total of linearly spaced `7` elements\n",
+    "* You result should be a `(7 x 7)` array, each element is the Gaussian of coordinates `(x, y)`.\n",
+    "* Try **NOT** to use loop even if you are attempted to!!\n",
     "* Desired output:\n",
     ">```\n",
     "x =  [-3. -2. -1.  0.  1.  2.  3.]\n",
@@ -271,19 +271,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "zAdpTu43sdri"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4234285557.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mx = # FIX ME\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "x = # FIX ME\n",
     "y = # FIX ME\n",
+    "sigma=1\n",
     "print(\"x = \", x)\n",
     "print(\"y = \\n\", y)\n",
     "\n",
-    "r = # FIX ME\n",
-    "print(\"r = \\n\", r.round(decimals=2))"
+    "#Hint: Use np.exp() to calculate the Gaussian\n",
+    "G = # FIX ME\n",
+    "np.set_printoptions(suppress=True, precision=5) #Avoid printing in scientific format\n",
+    "print(\"G = \\n\", G)"
    ]
   },
   {
@@ -384,15 +396,24 @@
     "**These are your tasks:**\n",
     "\n",
     "* Create the numpy array\n",
-    "* Simulate a fertilizer boost, e.g, each plant is height is growing by 5% per each day (multiply with 1.05 every height)\n",
+    "* Simulate a fertilizer boost, e.g, each plant height is growing by 5% per each day (multiply with 1.05 every height)\n",
     "* Compute statistics like average height, max height, and total growth\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (389339653.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mheights = # FIX ME\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Create a NumPy array with heights (in cm) of 3 plants over 7 days\n",
     "# Use np.array() to define this 2D array (shape: 3x7)\n",
@@ -412,8 +433,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Simulate a fertilizer boost: all plants grow 5% more each day\n",
-    "# Use a universal function (ufunc) to scale the heights by 1.05\n",
+    "# 2. Simulate a fertilizer boost: each plant grow 5% more each day\n",
+    "# Use a universal function (ufunc) to scale each plant height by 1.05\n",
     "# Hint: Use element-wise multiplication\n",
     "\n",
     "boosted = # FIX ME\n",
@@ -433,24 +454,13 @@
     "avg_per_plant = # FIX ME\n",
     "max_per_plant = # FIX ME\n",
     "\n",
-    "print(\"\\n Average per Plant\\n = \", avg_per_plant)\n",
-    "print(\"\\n Maximum per Plant\\n = \", max_per_plant)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 4. Calculate total growth over 7 days (final height - initial height)\n",
+    "# Calculate total growth over 7 days (final height - initial height)\n",
     "# Hint: Access first and last column of each row\n",
     "\n",
     "growth = # FIX ME\n",
     "\n",
-    "# 5. Print results\n",
-    "print(\"Average height per plant:\", avg_per_plant)\n",
-    "print(\"Maximum height per plant:\", max_per_plant)\n",
+    "print(\"\\n Average per Plant\\n = \", avg_per_plant)\n",
+    "print(\"\\n Maximum per Plant\\n = \", max_per_plant)\n",
     "print(\"Total growth in 7 days:\", growth)"
    ]
   },
