--- a/day2/IntermediatePython_Exercises_Solutions.ipynb
+++ b/day2/IntermediatePython_Exercises_Solutions.ipynb
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,8 @@
       " =  [14.925 10.275 11.595]\n",
       "\n",
       " Maximum per Plant\n",
-      " =  [17.85 12.6  13.65]\n"
+      " =  [17.85 12.6  13.65]\n",
+      "Total growth in 7 days: [7.35 4.2  4.2 ]\n"
      ]
     }
    ],
@@ -498,34 +499,13 @@
     "avg_per_plant = np.mean(boosted, axis=1)\n",
     "max_per_plant = np.max(boosted, axis=1)\n",
     "\n",
-    "print(\"\\n Average per Plant\\n = \", avg_per_plant)\n",
-    "print(\"\\n Maximum per Plant\\n = \", max_per_plant)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average height per plant: [14.925 10.275 11.595]\n",
-      "Maximum height per plant: [17.85 12.6  13.65]\n",
-      "Total growth in 7 days: [7.35 4.2  4.2 ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 4. Calculate total growth over 7 days (final height - initial height)\n",
+    "# Calculate total growth over 7 days (final height - initial height)\n",
     "# Hint: Access first and last column of each row\n",
     "\n",
     "growth = boosted[:, -1] - boosted[:, 0]\n",
     "\n",
-    "# 5. Print results\n",
-    "print(\"Average height per plant:\", avg_per_plant)\n",
-    "print(\"Maximum height per plant:\", max_per_plant)\n",
+    "print(\"\\n Average per Plant\\n = \", avg_per_plant)\n",
+    "print(\"\\n Maximum per Plant\\n = \", max_per_plant)\n",
     "print(\"Total growth in 7 days:\", growth)"
    ]
   },
