--- a/day2/IntermediatePython_Exercises_Solutions.ipynb
+++ b/day2/IntermediatePython_Exercises_Solutions.ipynb
@@ -19,9 +19,9 @@
     "# **Day 2: Intermediate Python (Exercises)**\n",
     "### 2025 LONI Scientific Computing Bootcamp\n",
     "\n",
-    "Dr. Jianxiong \"Jason\" Li\n",
+    "Dr. Jianxiong \"Jason\" Li, Dr. Siva Prasad Kasetti\n",
     "\n",
-    "jasonli3@lsu.edu\n",
+    "jasonli3@lsu.edu, skasetti1@lsu.edu\n",
     "\n",
     "Jun 3, 2025"
    ]
