--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -2750,9 +2750,34 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "Complex numbers are supported as a built-in numeric type and can be compared for equality using == or !=, but ordering comparisons like <, >, <=, or >= are not allowed and will raise a TypeError. For example, (3 + 5j) == (3 + 5j) returns True, while (3 + 4j) < (5 + 2j) will cause an error. This is because complex numbers do not have a natural ordering in mathematics, and Python enforces this by disallowing relational comparisons. If ordering is needed (e.g., for sorting), users must define a custom key—often using the magnitude (abs()) or real/imaginary parts.\n",
+        "\n",
+        "The abs() function returns the magnitude (or modulus) of a complex number, which is calculated as the square root of the sum of the squares of its real and imaginary parts: abs(a+bj) = sqrt(a^2 + b^2)"
+      ],
+      "metadata": {
+        "id": "x93QYcdninb2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "CTJ4sPSdjEl0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Complex numbers can not be compared using comparison operators\n",
+        "# Complex numbers can be compared using comparison operators ==, !=.\n",
         "\n",
         "myFirstComplex  = 3 + 5j\n",
         "mySecondComplex = 3 + 5j\n",
@@ -2761,6 +2786,38 @@
       ],
       "metadata": {
         "id": "swG8H4lNN_aT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Complex numbers can be compared using their absolute values.\n",
+        "\n",
+        "myFirstComplex = 3 + 5j\n",
+        "mySecondComplex = 3 + 4j\n",
+        "\n",
+        "print(abs(myFirstComplex) < abs(mySecondComplex))"
+      ],
+      "metadata": {
+        "id": "uvy3mjd5jpJM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Complex numbers can not be compared using >, <, <=, >= operators.\n",
+        "\n",
+        "myFirstComplex = 3 + 5j\n",
+        "mySecondComplex = 2 +3j\n",
+        "\n",
+        "print(myFirstComplex > mySecondComplex)"
+      ],
+      "metadata": {
+        "id": "0Qij81WikDKu"
       },
       "execution_count": null,
       "outputs": []
@@ -12271,7 +12328,7 @@
         },
         "outputId": "2723f6f6-9096-47c2-8359-6bff17c624b4"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13095,7 +13152,7 @@
         },
         "outputId": "f414ab7c-5960-4888-9054-76445855e0e8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -14287,7 +14344,7 @@
       "metadata": {
         "id": "YqDpuVv25Xs4"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14557,7 +14614,7 @@
       "metadata": {
         "id": "WadhmBmmf7mf"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14584,7 +14641,7 @@
       "metadata": {
         "id": "UUMAamCroN0l"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -15857,7 +15914,7 @@
         },
         "outputId": "d374d29e-ca39-4cdd-a793-2c29600cc00f"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15892,7 +15949,7 @@
         },
         "outputId": "37f99680-0af6-4ca4-b0f5-b6454e4d6efc"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
